listing grid view - fix on smaller screens

--- a/src/karmen_frontend/src/assets/styles.scss
+++ b/src/karmen_frontend/src/assets/styles.scss
@@ -383,11 +383,17 @@ footer {
 
     .list-items {
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
       grid-template-rows: 1fr;
       align-items: start;
+      grid-gap: $base-unit*2;
+      padding: 0 $base-unit*2;
 
+      @media (min-width: $screen-sm-min) {
+        grid-template-columns: 1fr 1fr 1fr;
+      }
       .list-item {
+        padding: 0;
         border-top:none;
       }      
     }
@@ -426,6 +432,7 @@ footer {
 
   .list-view-switch {
     float: right;
+    padding: 0 $base-unit;
     font-size: 3rem;
 
     button {
